--- a/style.css
+++ b/style.css
@@ -24,6 +24,14 @@ body {
   padding: 1rem 2.5rem;
 }
 
+.weatherIcon{
+  background-position: 50% !important;
+  background-repeat: no-repeat !important;
+  background-size: contain;
+  display: block;
+  height: 25%;
+  margin: 2rem auto;
+}
 .input-group{
   position: relative;
   display: flex;
