--- a/style.css
+++ b/style.css
@@ -120,3 +120,13 @@ body {
   display: flex;
   gap: 10px;
 }
+
+.Forecast{
+  display:grid;
+  grid-template-columns: repeat(3, 350px);
+  grid-auto-flow: row;
+  row-gap: 1rem;
+  column-gap: 10px;
+}
+
+
